--- a/Anaemia_detection.ipynb
+++ b/Anaemia_detection.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1vslTmyejlnf9y5yv7JqXCdv2q-3UT25i",
-      "authorship_tag": "ABX9TyNgb7HyPYh9rG23cRmjT7Ad",
+      "authorship_tag": "ABX9TyOLjrkOFqsW+qr6J5Re/Aty",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def img_to_numpy_array(folder_path):   #functioin to return numpy array of images in the specified folder\n",
+        "def img_to_numpy_array(folder_path):   #functioin to return numpy array of all the images in the specified folder\n",
         "  data_path = os.path.join(folder_path,'*g')\n",
         "  files = glob.glob(data_path)\n",
         "  img_arr = []\n",
@@ -101,16 +101,15 @@
       "metadata": {
         "id": "viWfFhPfAhRB"
       },
-      "execution_count": null,
+      "execution_count": 92,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def mean_intensity_array(data_arr):               #return array containing mean intensitites of all arrays\n",
-        "  def mean_intensity_single_image(image,color):  #return mean intensity of a color (red,green,blue) of a single image\n",
-        "    #color in {0,1,2} for R,G,B\n",
-        "    rows,columns,rgb = image.shape\n",
+        "def mean_intensity_array(data_arr):                   #return array containing mean intensitites of all the images in the given array\n",
+        "  def mean_intensity_single_image(image,color):       #return mean intensity of a color (red,green,blue) of a single image\n",
+        "    rows,columns,rgb = image.shape                    #color in {0,1,2} for R,G,B\n",
         "    intensity = 0\n",
         "    for i in range(rows):\n",
         "      for j in range(columns):\n",
@@ -126,7 +125,7 @@
       "metadata": {
         "id": "kbjIqX12EiW2"
       },
-      "execution_count": null,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -144,7 +143,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def img_augmentation():\n",
+        "def img_augmentation():                                                   #Getting error while implementing\n",
         "  data_gen = ImageDataGenerator(rotation_range=45,\n",
         "                              width_shift_range=0.2,\n",
         "                              height_shift_range=0.2,\n",
@@ -157,6 +156,31 @@
         "id": "4lRYEBCtaDyh"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def img_augment(x_train,y_train):                                 #Gives augemented (image, label arrays) of 4 times the number of input images.\n",
+        "  train_x = x_train\n",
+        "  train_y = y_train\n",
+        "  final_train_data = []\n",
+        "  final_target_train = []\n",
+        "  for i in range(train_x.shape[0]):\n",
+        "      final_train_data.append(train_x[i])\n",
+        "      final_train_data.append(rotate(train_x[i], angle=45, mode = 'wrap'))\n",
+        "      final_train_data.append(np.fliplr(train_x[i]))\n",
+        "      final_train_data.append(np.flipud(train_x[i]))\n",
+        "      for j in range(4):\n",
+        "          final_target_train.append(train_y[i])\n",
+        "  final_train_data = np.array(final_train_data)\n",
+        "  final_target_train = np.array(final_target_train)\n",
+        "  return final_train_data,final_target_train"
+      ],
+      "metadata": {
+        "id": "EbwnJt8jt_8a"
+      },
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -246,40 +270,45 @@
     {
       "cell_type": "code",
       "source": [
-        "train_x = x_train\n",
-        "train_y = y_train\n",
-        "final_train_data = []\n",
-        "final_target_train = []\n",
-        "for i in range(train_x.shape[0]):\n",
-        "    final_train_data.append(train_x[i])\n",
-        "    final_train_data.append(rotate(train_x[i], angle=45, mode = 'wrap'))\n",
-        "    final_train_data.append(np.fliplr(train_x[i]))\n",
-        "    final_train_data.append(np.flipud(train_x[i]))\n",
-        "    for j in range(4):\n",
-        "        final_target_train.append(train_y[i])"
+        "final_data_arr,final_label_arr = img_augment(x_train,y_train)"
       ],
       "metadata": {
         "id": "8GAHz5SqQnGB"
       },
-      "execution_count": null,
+      "execution_count": 95,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "final_train_data = np.array(final_train_data)\n",
-        "final_target_train = np.array(final_target_train)"
+        "final_data_arr.shape                #Number of images after augmentation = 584"
       ],
       "metadata": {
-        "id": "WVySOe1vRKrp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KUgyOjXQw6q1",
+        "outputId": "79931416-954c-4ca7-8d4d-c8782add8d0b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(584, 224, 224, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "cnn = models.Sequential([\n",
+        "                         \n",
         "                         layers.Conv2D(32,3,activation='relu',input_shape = (224,224,3)),\n",
         "                         layers.MaxPooling2D(),\n",
         "                         layers.BatchNormalization(),\n",
@@ -296,13 +325,12 @@
         "\n",
         "                         layers.Dense(1,activation='sigmoid')\n",
         "\n",
-        "                      \n",
         "])"
       ],
       "metadata": {
         "id": "aAOC5PqZUWJr"
       },
-      "execution_count": null,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -321,7 +349,7 @@
     {
       "cell_type": "code",
       "source": [
-        "cnn.fit(final_train_data,final_target_train,epochs=10)"
+        "cnn.fit(final_data_arr,final_label_arr,epochs=10)"
       ],
       "metadata": {
         "colab": {
