--- a/Anaemia_detection.ipynb
+++ b/Anaemia_detection.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1vslTmyejlnf9y5yv7JqXCdv2q-3UT25i",
-      "authorship_tag": "ABX9TyOLjrkOFqsW+qr6J5Re/Aty",
+      "authorship_tag": "ABX9TyMZZrOd63KfCYymL5YmV9Q+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -313,7 +313,7 @@
         "                         layers.MaxPooling2D(),\n",
         "                         layers.BatchNormalization(),\n",
         "\n",
-        "                         layers.Conv2D(64,3,activation='relu',input_shape = (224,224,3)),\n",
+        "                         layers.Conv2D(64,3,activation='relu'),\n",
         "                         layers.MaxPooling2D(),\n",
         "                         layers.BatchNormalization(),\n",
         "\n",
@@ -330,7 +330,7 @@
       "metadata": {
         "id": "aAOC5PqZUWJr"
       },
-      "execution_count": 96,
+      "execution_count": 99,
       "outputs": []
     },
     {
